// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convert > groupDefinitionTasksByDefinitionIdAndSortedByAvailableFromAndEnabledFirstTaskOfSameType > this test is just a snapshot test to prevent regressions 1`] = `
[
  {
    "availableFrom": 2023-04-03T14:00:00.000Z,
    "availableTo": 2023-04-04T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": false,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200118ybo1dztmd0j",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T14:00:00.000Z,
    "availableTo": 2023-04-05T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200128ybowcz8nwnn",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T14:00:00.000Z,
    "availableTo": 2023-04-06T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200138ybog5s2pcpv",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T14:00:00.000Z,
    "availableTo": 2023-04-07T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200148ybogu4jnkam",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T14:00:00.000Z,
    "availableTo": 2023-04-08T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200158ybopk444l73",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T14:00:00.000Z,
    "availableTo": 2023-04-09T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200168yboie5ogspc",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T14:00:00.000Z,
    "availableTo": 2023-04-10T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:49:53.102Z,
      "description": "Sprawdzenie maszyny 001",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb8zolq000t8ybouzrsn213",
      "name": "Sprawdzenie maszyny 001",
      "updatedAt": 2023-04-10T19:49:53.102Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zolq000t8ybouzrsn213",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8yx37000c8ybogkx35jhc",
    "id": "clgb90ay200178yboc11etdqo",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T06:00:00.000Z,
    "availableTo": 2023-04-04T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": false,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001e8ybogkijsk5l",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T14:00:00.000Z,
    "availableTo": 2023-04-04T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001f8ybo2kkwrlw2",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T22:00:00.000Z,
    "availableTo": 2023-04-04T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001g8ybovam88781",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T06:00:00.000Z,
    "availableTo": 2023-04-05T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001h8yboioip08l3",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T14:00:00.000Z,
    "availableTo": 2023-04-05T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001i8ybo6jzc4xtn",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T22:00:00.000Z,
    "availableTo": 2023-04-05T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001j8yboor4vm8bt",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T06:00:00.000Z,
    "availableTo": 2023-04-06T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001k8ybo685ifcaz",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T14:00:00.000Z,
    "availableTo": 2023-04-06T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001l8ybopkf2ja1m",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T22:00:00.000Z,
    "availableTo": 2023-04-06T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001m8ybo0leb6bs1",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T06:00:00.000Z,
    "availableTo": 2023-04-07T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001n8ybop15fh51u",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T14:00:00.000Z,
    "availableTo": 2023-04-07T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001o8yboql2pqyzw",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T22:00:00.000Z,
    "availableTo": 2023-04-07T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001p8yboztzpg4ox",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T06:00:00.000Z,
    "availableTo": 2023-04-08T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001q8ybobx9ynbn2",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T14:00:00.000Z,
    "availableTo": 2023-04-08T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001r8ybohfb17qnz",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T22:00:00.000Z,
    "availableTo": 2023-04-08T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001s8ybou0mxkmyy",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T06:00:00.000Z,
    "availableTo": 2023-04-09T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001y8ybopcvjtcjw",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T14:00:00.000Z,
    "availableTo": 2023-04-09T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001z8yboglwvjben",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T22:00:00.000Z,
    "availableTo": 2023-04-09T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001a8yboz3h2kno2",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T06:00:00.000Z,
    "availableTo": 2023-04-10T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001t8ybonxl6uo1q",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T14:00:00.000Z,
    "availableTo": 2023-04-10T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001u8ybozczkhx15",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T22:00:00.000Z,
    "availableTo": 2023-04-10T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:01.313Z,
      "description": "Sprawdzenie maszyny 002",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb8zuxt000v8yboag9hdund",
      "name": "Sprawdzenie maszyny 002",
      "updatedAt": 2023-04-10T19:50:01.313Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb8zuxt000v8yboag9hdund",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay2001v8ybou0xzravj",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T06:00:00.000Z,
    "availableTo": 2023-04-04T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": false,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay300258ybo7zx6vgup",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T14:00:00.000Z,
    "availableTo": 2023-04-04T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay300268ybo46hqvsq4",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-03T22:00:00.000Z,
    "availableTo": 2023-04-04T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay300278yboiialwbqd",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T06:00:00.000Z,
    "availableTo": 2023-04-05T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay300288ybofw2q77hh",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T14:00:00.000Z,
    "availableTo": 2023-04-05T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay300298ybo14e6vjtf",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-04T22:00:00.000Z,
    "availableTo": 2023-04-05T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002a8ybokp63k22u",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T06:00:00.000Z,
    "availableTo": 2023-04-06T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002b8ybozmd9nqoi",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T14:00:00.000Z,
    "availableTo": 2023-04-06T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002c8yboq43zm4dh",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-05T22:00:00.000Z,
    "availableTo": 2023-04-06T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002d8ybozve2aa2q",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T06:00:00.000Z,
    "availableTo": 2023-04-07T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002e8ybov46n63vj",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T14:00:00.000Z,
    "availableTo": 2023-04-07T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002f8ybokp56bmoh",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-06T22:00:00.000Z,
    "availableTo": 2023-04-07T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002g8ybot23mw7ij",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T06:00:00.000Z,
    "availableTo": 2023-04-08T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002h8ybo5u3in1n4",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T14:00:00.000Z,
    "availableTo": 2023-04-08T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb908o2000z8ybodqy6ty1h",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8zfuy000o8ybog5wp1s68",
    "id": "clgb90ay3002r8yboape52edm",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-07T22:00:00.000Z,
    "availableTo": 2023-04-08T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002j8ybomviho29k",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T06:00:00.000Z,
    "availableTo": 2023-04-09T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002p8yboc8w27z4s",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T14:00:00.000Z,
    "availableTo": 2023-04-09T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002q8ybok25a5f0b",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-08T22:00:00.000Z,
    "availableTo": 2023-04-09T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay200218ybot42izipx",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T06:00:00.000Z,
    "availableTo": 2023-04-10T06:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002k8ybovys6bgt9",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T14:00:00.000Z,
    "availableTo": 2023-04-09T14:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002l8yboulo5tmnk",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
  {
    "availableFrom": 2023-04-09T22:00:00.000Z,
    "availableTo": 2023-04-10T22:00:00.000Z,
    "createdAt": 2023-04-10T19:50:22.058Z,
    "createdBy": "SYSTEM",
    "definition": {
      "createdAt": 2023-04-10T19:50:08.545Z,
      "description": "Sprawdzenie maszyny 003",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb900io000x8ybo7disfxvf",
      "name": "Sprawdzenie maszyny 003",
      "updatedAt": 2023-04-10T19:50:08.545Z,
      "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
    },
    "definitionId": "clgb900io000x8ybo7disfxvf",
    "derived": {
      "disabled": true,
      "value": false,
    },
    "frequencyId": "clgb8z7fg000g8ybota1ion10",
    "id": "clgb90ay3002m8ybo2022bkoj",
    "status": "MISSING",
    "updatedAt": 2023-04-10T19:50:22.058Z,
    "updatedBy": "SYSTEM",
  },
]
`;

exports[`convert > groupDefinitionTasksByEveryDayAndSortByAvailableFrom > this test is just a snapshot test to prevent regressions 1`] = `
{
  "0": [
    {
      "availableFrom": 2023-04-09T14:00:00.000Z,
      "availableTo": 2023-04-10T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200178yboc11etdqo",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "1": [
    {
      "availableFrom": 2023-04-03T14:00:00.000Z,
      "availableTo": 2023-04-04T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200118ybo1dztmd0j",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "2": [
    {
      "availableFrom": 2023-04-04T14:00:00.000Z,
      "availableTo": 2023-04-05T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200128ybowcz8nwnn",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "3": [
    {
      "availableFrom": 2023-04-05T14:00:00.000Z,
      "availableTo": 2023-04-06T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200138ybog5s2pcpv",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "4": [
    {
      "availableFrom": 2023-04-06T14:00:00.000Z,
      "availableTo": 2023-04-07T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200148ybogu4jnkam",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "5": [
    {
      "availableFrom": 2023-04-07T14:00:00.000Z,
      "availableTo": 2023-04-08T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200158ybopk444l73",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "6": [
    {
      "availableFrom": 2023-04-08T14:00:00.000Z,
      "availableTo": 2023-04-09T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:49:53.102Z,
        "description": "Sprawdzenie maszyny 001",
        "frequencyId": "clgb8yx37000c8ybogkx35jhc",
        "id": "clgb8zolq000t8ybouzrsn213",
        "name": "Sprawdzenie maszyny 001",
        "updatedAt": 2023-04-10T19:49:53.102Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zolq000t8ybouzrsn213",
      "frequencyId": "clgb8yx37000c8ybogkx35jhc",
      "id": "clgb90ay200168yboie5ogspc",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
}
`;

exports[`convert > groupDefinitionTasksByEveryDayAndSortByAvailableFrom > this test is just a snapshot test to prevent regressions 2`] = `
{
  "0": [
    {
      "availableFrom": 2023-04-08T22:00:00.000Z,
      "availableTo": 2023-04-09T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001a8yboz3h2kno2",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T06:00:00.000Z,
      "availableTo": 2023-04-10T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001t8ybonxl6uo1q",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T14:00:00.000Z,
      "availableTo": 2023-04-10T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001u8ybozczkhx15",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "1": [
    {
      "availableFrom": 2023-04-03T06:00:00.000Z,
      "availableTo": 2023-04-04T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001e8ybogkijsk5l",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-03T14:00:00.000Z,
      "availableTo": 2023-04-04T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001f8ybo2kkwrlw2",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T22:00:00.000Z,
      "availableTo": 2023-04-10T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001v8ybou0xzravj",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "2": [
    {
      "availableFrom": 2023-04-03T22:00:00.000Z,
      "availableTo": 2023-04-04T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001g8ybovam88781",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-04T06:00:00.000Z,
      "availableTo": 2023-04-05T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001h8yboioip08l3",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-04T14:00:00.000Z,
      "availableTo": 2023-04-05T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001i8ybo6jzc4xtn",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "3": [
    {
      "availableFrom": 2023-04-04T22:00:00.000Z,
      "availableTo": 2023-04-05T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001j8yboor4vm8bt",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-05T06:00:00.000Z,
      "availableTo": 2023-04-06T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001k8ybo685ifcaz",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-05T14:00:00.000Z,
      "availableTo": 2023-04-06T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001l8ybopkf2ja1m",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "4": [
    {
      "availableFrom": 2023-04-05T22:00:00.000Z,
      "availableTo": 2023-04-06T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001m8ybo0leb6bs1",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-06T06:00:00.000Z,
      "availableTo": 2023-04-07T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001n8ybop15fh51u",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-06T14:00:00.000Z,
      "availableTo": 2023-04-07T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001o8yboql2pqyzw",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "5": [
    {
      "availableFrom": 2023-04-06T22:00:00.000Z,
      "availableTo": 2023-04-07T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001p8yboztzpg4ox",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-07T06:00:00.000Z,
      "availableTo": 2023-04-08T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001q8ybobx9ynbn2",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-07T14:00:00.000Z,
      "availableTo": 2023-04-08T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001r8ybohfb17qnz",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "6": [
    {
      "availableFrom": 2023-04-07T22:00:00.000Z,
      "availableTo": 2023-04-08T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001s8ybou0mxkmyy",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-08T06:00:00.000Z,
      "availableTo": 2023-04-09T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001y8ybopcvjtcjw",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-08T14:00:00.000Z,
      "availableTo": 2023-04-09T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:01.313Z,
        "description": "Sprawdzenie maszyny 002",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb8zuxt000v8yboag9hdund",
        "name": "Sprawdzenie maszyny 002",
        "updatedAt": 2023-04-10T19:50:01.313Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb8zuxt000v8yboag9hdund",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay2001z8yboglwvjben",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
}
`;

exports[`convert > groupDefinitionTasksByEveryDayAndSortByAvailableFrom > this test is just a snapshot test to prevent regressions 3`] = `
{
  "0": [
    {
      "availableFrom": 2023-04-08T22:00:00.000Z,
      "availableTo": 2023-04-09T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay200218ybot42izipx",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T06:00:00.000Z,
      "availableTo": 2023-04-10T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002k8ybovys6bgt9",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T14:00:00.000Z,
      "availableTo": 2023-04-09T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002l8yboulo5tmnk",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "1": [
    {
      "availableFrom": 2023-04-03T06:00:00.000Z,
      "availableTo": 2023-04-04T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay300258ybo7zx6vgup",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-03T14:00:00.000Z,
      "availableTo": 2023-04-04T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay300268ybo46hqvsq4",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-09T22:00:00.000Z,
      "availableTo": 2023-04-10T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002m8ybo2022bkoj",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "2": [
    {
      "availableFrom": 2023-04-03T22:00:00.000Z,
      "availableTo": 2023-04-04T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay300278yboiialwbqd",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-04T06:00:00.000Z,
      "availableTo": 2023-04-05T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay300288ybofw2q77hh",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-04T14:00:00.000Z,
      "availableTo": 2023-04-05T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay300298ybo14e6vjtf",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "3": [
    {
      "availableFrom": 2023-04-04T22:00:00.000Z,
      "availableTo": 2023-04-05T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002a8ybokp63k22u",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-05T06:00:00.000Z,
      "availableTo": 2023-04-06T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002b8ybozmd9nqoi",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-05T14:00:00.000Z,
      "availableTo": 2023-04-06T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002c8yboq43zm4dh",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "4": [
    {
      "availableFrom": 2023-04-05T22:00:00.000Z,
      "availableTo": 2023-04-06T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002d8ybozve2aa2q",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-06T06:00:00.000Z,
      "availableTo": 2023-04-07T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002e8ybov46n63vj",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-06T14:00:00.000Z,
      "availableTo": 2023-04-07T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002f8ybokp56bmoh",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "5": [
    {
      "availableFrom": 2023-04-06T22:00:00.000Z,
      "availableTo": 2023-04-07T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002g8ybot23mw7ij",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-07T06:00:00.000Z,
      "availableTo": 2023-04-08T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002h8ybo5u3in1n4",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-07T14:00:00.000Z,
      "availableTo": 2023-04-08T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb908o2000z8ybodqy6ty1h",
      "frequencyId": "clgb8zfuy000o8ybog5wp1s68",
      "id": "clgb90ay3002r8yboape52edm",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
  "6": [
    {
      "availableFrom": 2023-04-07T22:00:00.000Z,
      "availableTo": 2023-04-08T22:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002j8ybomviho29k",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-08T06:00:00.000Z,
      "availableTo": 2023-04-09T06:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002p8yboc8w27z4s",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
    {
      "availableFrom": 2023-04-08T14:00:00.000Z,
      "availableTo": 2023-04-09T14:00:00.000Z,
      "createdAt": 2023-04-10T19:50:22.058Z,
      "createdBy": "SYSTEM",
      "definition": {
        "createdAt": 2023-04-10T19:50:08.545Z,
        "description": "Sprawdzenie maszyny 003",
        "frequencyId": "clgb8z7fg000g8ybota1ion10",
        "id": "clgb900io000x8ybo7disfxvf",
        "name": "Sprawdzenie maszyny 003",
        "updatedAt": 2023-04-10T19:50:08.545Z,
        "workplaceId": "clgb8yo2g000b8ybo4ogew4em",
      },
      "definitionId": "clgb900io000x8ybo7disfxvf",
      "frequencyId": "clgb8z7fg000g8ybota1ion10",
      "id": "clgb90ay3002q8ybok25a5f0b",
      "status": "MISSING",
      "updatedAt": 2023-04-10T19:50:22.058Z,
      "updatedBy": "SYSTEM",
    },
  ],
}
`;
